# tkg-context-engine

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: chat.py  events.py  graph.py  knowledge.py  query.py  relations.py  temporal.py
backend/app/models/: schemas.py  temporal_schemas.py
backend/app/services/: causality_engine.py  conditional_invalidation_engine.py  derived_event_engine.py  event_deduplication_service.py  event_normalization_service.py  falkordb_service.py  graphiti_service.py  precise_timepoint_query_engine.py  state_machine_service.py  state_transition_engine.py  temporal_db_service.py  temporal_graphiti_service.py
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatInterface.tsx  Dashboard.tsx  GraphExplorer.tsx  KnowledgeManager.tsx  Navbar.tsx  TemporalExplorer.tsx
scripts/: clear_graph_db.py  create_inference_events.py  import_fault_timeline.py  import_seed_data.py  start_all_services.sh  stop_all_services.sh  temporal_event_optimization.py  test_enhanced_temporal_api.py  test_invalidation_engine.py  test_state_transitions.py  validate_fault_timeline.py
